implementation of task 3 and its tests