@@ -165,17 +165,6 @@
                     </annotationProcessorPaths>
                 </configuration>
             </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>3.2.5</version>
-                <configuration>
-                    <systemPropertyVariables>
-                        <spring.profiles.active>test</spring.profiles.active>
-                    </systemPropertyVariables>
-                    <argLine>--enable-preview</argLine>
-                </configuration>
-            </plugin>
             <!-- UNIT TESTS -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
